--- a/TGCameraViewController/Classes/View/Base.lproj/TGCameraViewController.xib
+++ b/TGCameraViewController/Classes/View/Base.lproj/TGCameraViewController.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,6 +22,7 @@
                 <outlet property="closeButton" destination="O3k-MF-E1l" id="WpI-xb-eE2"/>
                 <outlet property="flashButton" destination="p7O-pE-Mp0" id="Tqo-vg-CGw"/>
                 <outlet property="gridButton" destination="Nol-dD-ETh" id="tfG-QF-CbC"/>
+                <outlet property="overlayImageView" destination="gV0-GH-69t" id="NmA-8P-LM6"/>
                 <outlet property="separatorView" destination="xFF-75-cke" id="J08-U0-hk1"/>
                 <outlet property="shotButton" destination="wtQ-Dg-G3i" id="cWY-WV-5Gp"/>
                 <outlet property="slideDownView" destination="Czb-nz-m44" id="Ga2-kT-HSY"/>
@@ -105,21 +106,28 @@
                                 <constraint firstAttribute="height" constant="58" id="eM7-tr-8mw"/>
                             </constraints>
                         </imageView>
+                        <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gV0-GH-69t" userLabel="Overlay View">
+                            <rect key="frame" x="0.0" y="0.0" width="792" height="620"/>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <gestureRecognizers/>
                     <constraints>
                         <constraint firstItem="umk-ea-F3l" firstAttribute="top" secondItem="dIq-rQ-gzr" secondAttribute="top" id="1zC-th-e2x"/>
+                        <constraint firstItem="gV0-GH-69t" firstAttribute="leading" secondItem="dIq-rQ-gzr" secondAttribute="leading" id="6lv-vG-hFK"/>
                         <constraint firstAttribute="trailing" secondItem="umk-ea-F3l" secondAttribute="trailing" id="AUl-cM-5JL"/>
                         <constraint firstItem="ljD-PV-2sR" firstAttribute="top" secondItem="dIq-rQ-gzr" secondAttribute="top" id="Fdo-v8-dKt"/>
                         <constraint firstAttribute="bottom" secondItem="HFV-tF-409" secondAttribute="bottom" id="RFt-42-nJc"/>
                         <constraint firstAttribute="trailing" secondItem="xFF-75-cke" secondAttribute="trailing" id="Sxr-sS-Eqz"/>
                         <constraint firstAttribute="trailing" secondItem="HFV-tF-409" secondAttribute="trailing" id="WYU-Tw-4V7"/>
                         <constraint firstItem="2rS-OA-lDQ" firstAttribute="leading" secondItem="dIq-rQ-gzr" secondAttribute="leading" id="cyk-bG-M9K"/>
+                        <constraint firstAttribute="bottom" secondItem="gV0-GH-69t" secondAttribute="bottom" id="eR9-pA-1wb"/>
                         <constraint firstAttribute="centerY" secondItem="xFF-75-cke" secondAttribute="centerY" id="fOl-Ic-N0Q"/>
                         <constraint firstAttribute="bottom" secondItem="2rS-OA-lDQ" secondAttribute="bottom" id="fjD-cR-2nv"/>
                         <constraint firstAttribute="width" secondItem="dIq-rQ-gzr" secondAttribute="height" multiplier="1:1" priority="999" id="jHI-RV-Jf8"/>
                         <constraint firstItem="ljD-PV-2sR" firstAttribute="leading" secondItem="dIq-rQ-gzr" secondAttribute="leading" id="rxy-AI-9fw"/>
+                        <constraint firstItem="gV0-GH-69t" firstAttribute="top" secondItem="dIq-rQ-gzr" secondAttribute="top" id="syf-Vd-RLU"/>
+                        <constraint firstAttribute="trailing" secondItem="gV0-GH-69t" secondAttribute="trailing" id="tKO-2V-5kF"/>
                         <constraint firstItem="xFF-75-cke" firstAttribute="leading" secondItem="dIq-rQ-gzr" secondAttribute="leading" id="vve-NH-MbK"/>
                     </constraints>
                     <connections>
